better functioning filter

--- a/src/styles/Root.scss
+++ b/src/styles/Root.scss
@@ -7,8 +7,8 @@
 .nav-link {
         background-color: $rose;
         margin-right: 20px;
-        height: 4rem;
-        width: 6rem;
+        height:  40%;
+        width: 10%;
         border-radius: 1.5rem;
         align-items: center;
         display: flex; 
@@ -16,10 +16,11 @@
         cursor: pointer;
         color: $white;
         text-decoration: none;
+        text-transform: uppercase;
 
         &:hover {
             color: $lightrose;
-            border: $rose solid 2px;
+         
         }
     }
 
