--- a/src/styles/studentCard.scss
+++ b/src/styles/studentCard.scss
@@ -1,11 +1,31 @@
+@import "./colors";
+
+.filter-section{
+display: flex;
+}
+
 .studentSection{
     border: white solid 2px;
-    margin-bottom: 2rem;
-    cursor: pointer;
+    padding: 1rem 0 0 1rem;
 
+    background-color: $lightergrey;
+    border-radius: 1rem;
+    height: 30%;
+    width: 30%;
+   margin-bottom: 1rem;
 
 img{
     height: 10rem;
     width: 7rem;
+    margin: 1rem 0 0 1rem;
+}
+#student{
+    font-size: 1.5rem;
+}
+#more-info{
+    cursor: pointer;
+    &:hover{
+        color:white;
+    }
 }
 }
